# bitscpp

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  SPECIFICATION.md
include/bitscpp/: ByteReader.hpp  ByteReaderExtensions.hpp  ByteReader_v2.hpp  ByteWriter.hpp  ByteWriter2.hpp  ByteWriterExtensions.hpp  ByteWriter_v2.cpp  ByteWriter_v2.hpp  Endianness.hpp  Reader.hpp  SerizalizerClass.hpp  V2_Specification.hpp  VectorWrapper.hpp  Writer.hpp
src/: ByteReader_v2.cpp  ByteWriter_v2.cpp  ByteWriter_v2.inl.hpp  Endianness.cpp  Endianness.inl.hpp
tests/: Test.cpp
thirdpart/half_float/: HalfFloat.cpp  HalfFloat.hpp
